# rusty_SkillOpt

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  gap-analysis.md
.github/ISSUE_TEMPLATE/: config.yml
configs/: azure_openai_example.yaml  example.yaml  full_claude.yaml  full_claude_bigtrain.yaml  ollama_example.yaml  qwen_example.yaml  smoke_claude.yaml  smoke_claude_hard.yaml  smoke_claude_hard_bigtrain.yaml  smoke_claude_hard_bigval.yaml
crates/skillopt-cli/: Cargo.toml
crates/skillopt-cli/src/: main.rs
crates/skillopt-core/: Cargo.toml
crates/skillopt-core/src/: config.rs  engine.rs  lib.rs  prompts.rs  scheduler.rs  skill_edit.rs  traits.rs  types.rs
crates/skillopt-envs/: Cargo.toml
crates/skillopt-envs/src/: factory.rs  lib.rs  synthetic_arithmetic.rs
crates/skillopt-model/: Cargo.toml
crates/skillopt-model/src/: anthropic.rs  azure_openai.rs  factory.rs  lib.rs  mock.rs  openai_compat.rs
crates/skillopt-model/tests/: mock_backend.rs  openai_compat_auth.rs
skills/: initial.md
