[workspace]
resolver = "2"
members = [
    "crates/skillopt-core",
    "crates/skillopt-model",
    "crates/skillopt-envs",
    "crates/skillopt-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_skillopt"

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

skillopt-core = { path = "crates/skillopt-core" }
skillopt-model = { path = "crates/skillopt-model" }
skillopt-envs = { path = "crates/skillopt-envs" }
