[package]
name = "skillopt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skillopt"
path = "src/main.rs"

[dependencies]
skillopt-core.workspace = true
skillopt-model.workspace = true
skillopt-envs.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
