[package]
name = "skillopt-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillopt-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
